docs/3.0/readme.md
| Name | Alias | Description |
| --- | --- | --- |
| [AddUNSystemTables](./AddUNSystemTables.html) | Create Utility Network System Tables Views | Generate views on the utility network system tables. |
| [AdjustDataSources](./AdjustDataSources.html) | Update Data Sources | Use this tool to convert the data source of layers in the maps in the current ArcGIS Pro project to a workspace. |
| [AssociationSelection](./AssociationSelection.html) | Select by Association | Expands the current selection in the map based on specified utility network association types and layers. |
| [BatchTrace](./BatchTrace.html) | Batch Trace | Iterate through the starting points to trace the utility network and use the results. |
| [BuildStartingPoints](./BuildStartingPoints.html) | Build Starting Points | Creates starting points based on a trace configuration. |
| [CalculateTolerances](./CalculateTolerances.html) | Calculate Tolerances and Resolutions | Calculate the XY, Z, and M tolerances based on a measure unit for systems that will use a linear referencing system (LRS). |
| [ChangeGDBSpatialReference](./ChangeGDBSpatialReference.html) | Change GDB Spatial Reference | Creates a new file geodatabase in the user-specified spatial reference. |
| [CompareConfigurations](./CompareConfigurations.html) | Asset Package Configuration Report | Generates a collection of Excel Workbooks/Sheets to review the various Asset Package configuration options. |
| [CompareRenames](./CompareRenames.html) | Asset Package Rename Report | Generates a collection of Excel Workbooks/Sheets to review the various Asset Package rename options. |
| [ConfigureUtilityNetworkLayers](./ConfigureUtilityNetworkLayers.html) | Configure UN Layers | Configures utility network layers by modifying popups and display filters. |
| [CreateAssociationLines](./CreateAssociationLines.html) | Create Association Lines | Creates lines representing utility network associations. |
| [CreateUNTerminalContingentValues](./CreateUNTerminalContingentValues.html) | Create Terminal Contingent Values |  |
| [EnableLRSUPDM](./EnableLRSUPDM.html) | Enable APR on UPDM | Creates the script to enable LRS or enables LRS on a UPDM database with a utility network. |
| [ExportUtilityNetworkMatrix](./ExportUtilityNetworkMatrix.html) | Export Matrix | Creates Excel workbooks for visualizing and modifying Utility Network rules, categories, association roles, and terminal assignments. |
| [ExtractFileLogs](./ExtractFileLogs.html) | Extract Logs from Files | Generates a Mobile GDB with a record for each entry in a log file. |
| [ExtractRESTLogs](./ExtractRESTLogs.html) | Extract Logs from REST | Extracts logs from ArcGIS Server. |
| [FilterMap](./FilterMap.html) | Modify Map by Rename and Configure | Applies rename and configuration options to maps based on an asset package. |
| [GenerateReportGDB](./GenerateReportGDB.html) | Generate Reporting GDB | Generates a Mobile GDB with the Association and Controllers table and each Utility Network class with domain description in fields. |
| [ImportUtilityNetworkMatrix](./ImportUtilityNetworkMatrix.html) | Import Matrix | Loads the values from the rule, network category, and terminal assignment workbooks. |
| [SummarizeAttributeRules](./SummarizeAttributeRules.html) | Summarize Attribute Rules | Generates a Mobile GDB that summarizes the attribute rules in the workspace. |
| [SummarizeUNErrors](./SummarizeUNErrors.html) | Summarize Utility Network Errors | Generates a Mobile GDB with features for each error in the Utility Network and summary views. |
| [SummaryByBits](./SummaryByBits.html) | Summary by Bits | Summarizes records containing a bitwise coded value domain. |
| [Trace2Config](./Trace2Config.html) | Trace to Trace Configurations | Converts arcpy.un.Trace to arcpy.un.AddTraceConfiguration |

`Last built 2023-06-06`
